tests/errors/compiler/expected_colon_after_default/no_colon_in_default.c
void main()
{
	int a;
	switch (a)
	case 1:
	{
		print(1);
	}
	default
		print(2);
}
